<resources>
    <string name="app_name">UrbanStep</string>
    <string name="txt_register">Registe-se</string>
    <string name="txt_name">Nome</string>
    <string name="txt_email">Email</string>
    <string name="txt_pss">Password</string>
    <string name="txt_registar">Registar</string>
    <string name="txt_confirmPassword">Confirmar Password</string>
    <string name="txt_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="txt_optionsBtn">Mais Opções</string>
    <string name="txt_titulo">Título</string>
    <string name="txt_price">R$ 0,00</string>
    <string name="txt_todos">Todos</string>
    <string name="txt_masc">Masculino</string>
    <string name="txt_fem">Feminino</string>
    <string name="txt_crianca">Criança</string>
    <string name="txt_Username">Username</string>
    <string name="txt_Nome">Nome</string>
    <string name="txt_morada">morada</string>
    <string name="txt_nContribuinte">nContribuinte</string>
    <string name="txt_Morada">Morada</string>
    <string name="txt_NumeroContribuinte">Numero Contribuinte</string>
</resources>